fix links and spacing top of r sidebar

--- a/main2.css
+++ b/main2.css
@@ -98,8 +98,12 @@ h4 {
 	padding-bottom: 40px;
 	font-family: Asap;
 	font-size: 14px;
+	color: #cbd4db;
 }
-
+.sidebarname {
+	font-size: 18px;
+	padding-bottom: 2px;
+}
 .sidebarsection {
 	color: #819FF7;
 	font-family: Asap;
